Finalizacion del proyecto

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -16,7 +16,7 @@
 
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet"  type="text/css" href="assets/css/styles.css" media="screen">
+    <link type="text/css" href="assets/css/styles.css" media="screen">
     <!-- <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpVhQiwAllg1RAFaxMWSpQruuGARy0Y1k&libraries=places"></script> -->
 </head>
 
